<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla_login"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imagenLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/desc"
        android:orientation="vertical"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/textoID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/textoUsuario"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/texto" />

    <EditText
        android:id="@+id/textoPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/textoPass"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@color/texto" />

    <Button
        android:id="@+id/botonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/logearse"
        android:textColor="@color/boton"/>

</LinearLayout>